Error, region type 2 missing in - name:"File", id:5 #45075

Closed
opened 2015-06-14 13:57:48 +02:00 by Francesco Siddi · 18 comments

Hey there!
I've been advised by @Sergey to report this issue directly to you. All blendfiles opened in the latest gooseberry branch display the Error, region type 2 missing in - name:"File", id:5 error message in the console. This is not causing any harm to the files, but generates error warnings in the renderfarm (and in general raises concerns to whoever opens a file). Could you have a look at it?

Steps to reproduce:

  • Open Blender (Gooseberry branch)
  • Save untitled.blend
  • Load untitled.blend

I have disabled any non official add-on and reloaded factory settings.

Let me know if you need more info.
Thanks!

Hey there! I've been advised by @Sergey to report this issue directly to you. All blendfiles opened in the latest gooseberry branch display the `Error, region type 2 missing in - name:"File", id:5` error message in the console. This is not causing any harm to the files, but generates error warnings in the renderfarm (and in general raises concerns to whoever opens a file). Could you have a look at it? Steps to reproduce: - Open Blender (Gooseberry branch) - Save untitled.blend - Load untitled.blend I have disabled any non official add-on and reloaded factory settings. Let me know if you need more info. Thanks!
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Bastien Montagne was assigned by Francesco Siddi 2015-06-14 13:57:48 +02:00
Author
Member

Added subscribers: @fsiddi, @Sergey

Added subscribers: @fsiddi, @Sergey

Hmmm… sorry, but still cannot reproduce here… Tried with both using --factory-startup commandline arg, and loading my own, default startup and then File->LoadFactorySettings, but not a single message here.

Note about that message: it means somehow you have a filebrowser which still has the 'old', deprecated 'CHANNEL' area. This should not be possible, because versioning_270.c ensures on fileload that this area get removed (checking for version <=273.7).

I could have a look at your startup.blend file - but in theory, using factory startup should bypass it completely, so…

Hmmm… sorry, but still cannot reproduce here… Tried with both using `--factory-startup` commandline arg, and loading my own, default startup and then File->LoadFactorySettings, but not a single message here. Note about that message: it means somehow you have a filebrowser which still has the 'old', deprecated 'CHANNEL' area. This should not be possible, because `versioning_270.c` ensures on fileload that this area get removed (checking for version <=273.7). I could have a look at your startup.blend file - but in theory, using factory startup should bypass it completely, so…
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel

Added subscriber: @sindra1961

Added subscriber: @sindra1961

I remember that I watched the error message several times when I used the daily build version of June 11.
However, I do not watch it when I use the daily build version of June 14.

win32+scons

I remember that I watched the error message several times when I used the daily build version of June 11. However, I do not watch it when I use the daily build version of June 14. win32+scons

Added subscriber: @ideasman42

Added subscriber: @ideasman42

cant redo this, tested on 64bit linux.

@fsiddi, could you get a stack trace for this?

cant redo this, tested on 64bit linux. @fsiddi, could you get a stack trace for this?
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Member

No news in over a week....

No news in over a week....
Author
Member

Sorry for not replying. I can't get a stack trace. I will try to get a light file tomorrow and share it here.

Sorry for not replying. I can't get a stack trace. I will try to get a light file tomorrow and share it here.
Member

Don't have the time for further investigation right now, just wanted to note that I get the same warning when trying to recreate #45369.

Don't have the time for further investigation right now, just wanted to note that I get the same warning when trying to recreate #45369.

Added subscriber: @ChristopherBarry

Added subscriber: @ChristopherBarry

I am experiencing this today (July 17, 2015) with a fresh build of master on linux amd64.
Please advise how I can help troubleshoot it.

Thanks and regards,
Christopher

I am experiencing this today (July 17, 2015) with a fresh build of master on linux amd64. Please advise how I can help troubleshoot it. Thanks and regards, Christopher

my build log if you're interested
blender-build.log

my build log if you're interested [blender-build.log](https://archive.blender.org/developer/F207759/blender-build.log)

This issue was referenced by 9adf4cba7d

This issue was referenced by 9adf4cba7d978dcf84cfcdabdbbe7ad0ad19263b
Member

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45075
No description provided.